--- a/episode-01.html
+++ b/episode-01.html
@@ -17,13 +17,13 @@
   </header>
 <!-- INFO -->
   <div class="info">
-    <div class="box" style="border-right:1px solid #fff;">
+    <div class="box">
       <p><i>Episode I: From Underwater to Outer Space</i> is a collection of short videos. Composed of six units of information and enquiries that cross the Earth, penetrating geological strata and geographical terrains through a stigmergic lens, the videos focus particular attention to its relationship with concepts of empathy. In a time in which local urgencies are also global and vice versa, the project uses stigmergy as a loose lens and explores the design discipline in a speculative, creative and embedded way while questioning the centrality of the human individual within our environment. The short videos observe, question or alter the relations between human and non-human agents by re-imagining possible tools, languages, platforms, narratives and design scenarios in a search for new ways of seeing, existing and acting as collective organisms.<br>
       <br>
       The short videos are selected from the work of first year MA Students at the <a href="https://designacademy.nl/">Design Academy Eindhoven</a>. Developed between March and June 2020 as part of the “Stigmergy Collaborative Project”, the online program was mentored by Frans Bevers, Gabriel Fontana, Jesse Howard, Michelle Kasprzak, Irene Stracuzzi and Yvonne Droge Wendel, coordinated by Charlotte Bijl, and curated by Martina Muzi.
       </p><br><br>
     </div>
-    <div class="box">
+    <div class="box" style="border-right: none;">
       <p class="video-description">This episode will be launched here on 26 February 2021 at 2pm CET through radio conversations with the participants, hosted by <a href="https://goodtimesbadtimes.club/">Good Times Bad Times</a>.</p><br>
       <audio controls style="width:100%;">
         <source src="https://radio.goodtimesbadtimes.club/radio/8070/radio.mp3" type="audio/mpeg">
