--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <div class="menu">
     <p><a href="">About</a></p><br>
     <p>→ Episode 2: Coming soon <small>✺ April 2021 ✺ exhibition ✺ Istanbul Biennial ✺</small><br></p>
-    <p>→ <a href="episode-01.html">Episode 1: From Underwater to Outer Space</a></p> <small>✺ February 2021 ✺ online radio event ✺ Design Academy Eindhoven ✺ </small> <br>
+    <p>→ <a href="">Episode 1: From Underwater to Outer Space</a></p> <small>✺ February 2021 ✺ online radio event ✺ Design Academy Eindhoven ✺ </small> <br>
   </div>
 
 
