--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
   </div>
   <div class="menu">
     <p><a href="">About</a></p><br>
-    <p>→ Episode 2: Coming soon <small>✺ April 2021 ✺ exhibition ✺ Istanbul Biennial ✺</small><br></p>
-    <p>→ <a href="">Episode 1: From Underwater to Outer Space</a></p> <small>✺ February 2021 ✺ online radio event ✺ Design Academy Eindhoven ✺ </small> <br>
+    <p>→ Episode II: Coming soon <small>✺ April 2021 ✺ exhibition ✺ 5th Istanbul Biennial ✺</small><br></p>
+    <p>→ <a href="">Episode I: From Underwater to Outer Space</a></p> <small>✺ February 2021 ✺ online radio event ✺ Design Academy Eindhoven ✺ 5th Istanbul Biennial ✺</small> <br>
   </div>
 
 
