--- a/episode-01.html
+++ b/episode-01.html
@@ -4,6 +4,10 @@
   <title>Episode I</title>
   <link href="stylesheet.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
 </head>
 
 <body>
@@ -15,12 +19,16 @@
       <small><a href="index.html">Back to overview →</a></small>
     </div>
   </header>
-<!-- INFO -->
+  <!-- INFO -->
   <div class="info">
     <div class="box">
-      <p><i>Episode I: From Underwater to Outer Space</i> is a collection of short videos. Composed of six units of information and enquiries that cross the Earth, penetrating geological strata and geographical terrains through a stigmergic lens, the videos focus particular attention to its relationship with concepts of empathy. In a time in which local urgencies are also global and vice versa, the project uses stigmergy as a loose lens and explores the design discipline in a speculative, creative and embedded way while questioning the centrality of the human individual within our environment. The short videos observe, question or alter the relations between human and non-human agents by re-imagining possible tools, languages, platforms, narratives and design scenarios in a search for new ways of seeing, existing and acting as collective organisms.<br>
-      <br>
-      The short videos are selected from the work of first year MA Students at the <a href="https://designacademy.nl/">Design Academy Eindhoven</a>. Developed between March and June 2020 as part of the “Stigmergy Collaborative Project”, the online program was mentored by Frans Bevers, Gabriel Fontana, Jesse Howard, Michelle Kasprzak, Irene Stracuzzi and Yvonne Droge Wendel, coordinated by Charlotte Bijl, and curated by Martina Muzi.
+      <p><i>Episode I: From Underwater to Outer Space</i> is a collection of short videos. Composed of six units of information and enquiries that cross the Earth, penetrating geological strata and geographical terrains through a stigmergic lens, the
+        videos focus particular attention to its relationship with concepts of empathy. In a time in which local urgencies are also global and vice versa, the project uses stigmergy as a loose lens and explores the design discipline in a speculative,
+        creative and embedded way while questioning the centrality of the human individual within our environment. The short videos observe, question or alter the relations between human and non-human agents by re-imagining possible tools, languages,
+        platforms, narratives and design scenarios in a search for new ways of seeing, existing and acting as collective organisms.<br>
+        <br>
+        The short videos are selected from the work of first year MA Students at the <a href="https://designacademy.nl/">Design Academy Eindhoven</a>. Developed between March and June 2020 as part of the “Stigmergy Collaborative Project”, the online
+        program was mentored by Frans Bevers, Gabriel Fontana, Jesse Howard, Michelle Kasprzak, Irene Stracuzzi and Yvonne Droge Wendel, coordinated by Charlotte Bijl, and curated by Martina Muzi.
       </p><br>
     </div>
     <div class="box" style="border-right: none;">
@@ -39,7 +47,7 @@
       </p>
     </div>
   </div>
-<!-- VIDEOS -->
+  <!-- VIDEOS -->
   <div class="videos">
     <!-- video 1 -->
     <div class="box">
@@ -55,7 +63,10 @@
         Scale: -∞ to 0 cm<br>
         Design Tool: diving mask<br>
         <hr>
-        The nature of identity categorisation conditions us to see “the other” in opposition to “ourselves”; as a result, separation and conflict arise, leading to mutual misunderstandings. With the aim of humbling human kind, the Mask invites its wearer to see the world from the perspective of a microorganism. The Mask aims to reverse the dominant logic and offer different ways of seeing. A series of tentacle-shaped sensors are attached to the Mask, which is equipped with night vision. Thanks to these, the microorganisms, either floating in the ocean or bound to marine creatures, can be seen with the help of bioluminescence. This short video is composed of a sequence of found footage, animated by newly drawn animations which simulate fluorescent submarine vision, so the human eye can see underwater. Thus, we are reminded that “tools” are the central players in shaping relationships between humans and nature.
+        The nature of identity categorisation conditions us to see “the other” in opposition to “ourselves”; as a result, separation and conflict arise, leading to mutual misunderstandings. With the aim of humbling human kind, the Mask invites its
+        wearer to see the world from the perspective of a microorganism. The Mask aims to reverse the dominant logic and offer different ways of seeing. A series of tentacle-shaped sensors are attached to the Mask, which is equipped with night
+        vision. Thanks to these, the microorganisms, either floating in the ocean or bound to marine creatures, can be seen with the help of bioluminescence. This short video is composed of a sequence of found footage, animated by newly drawn
+        animations which simulate fluorescent submarine vision, so the human eye can see underwater. Thus, we are reminded that “tools” are the central players in shaping relationships between humans and nature.
       </p>
       <hr>
       <p class="video-credits">By: Daatje Vera Noot, Tzuyen Chen and Paula Chang <br>
@@ -77,7 +88,11 @@
         Scale: -∞ to +∞<br>
         Design Tool: <a href="https://e-cotuning.appspot.com/">E-cotuning interface</a>
         <hr>
-        E-cotuning is an audio-visual tool meant as a bionic musical interface using the internal algorithm of the microorganism Physarum Polycephalum, also known as slime mold. Made up of millions of nuclei, operating as a single entity, the amoeba Physarum Polycephalum possesses neither a brain nor any sensory organs, and bears no morphological resemblance to humans. Yet, its behaviour has some familiar characteristics to those of humans—high-level network optimisation capabilities, and the ability to learn from and adapt to surrounding environments. For example, during its foraging activities, the pulsation of this microorganism produces electric waves that correspond to different physiological states. It is possible to decode its frequencies by retrieving real-time data and subsequently simulating this behaviour through audio-visual representation. The video is a conjunction of Physarum’s extracted frequencies played back by musician Tomás Gubbins Correa, using different synthesisers. The result is an electronic symphony and an invitation to empathise with nonhuman systems, to listen to them.
+        E-cotuning is an audio-visual tool meant as a bionic musical interface using the internal algorithm of the microorganism Physarum Polycephalum, also known as slime mold. Made up of millions of nuclei, operating as a single entity, the amoeba
+        Physarum Polycephalum possesses neither a brain nor any sensory organs, and bears no morphological resemblance to humans. Yet, its behaviour has some familiar characteristics to those of humans—high-level network optimisation capabilities,
+        and the ability to learn from and adapt to surrounding environments. For example, during its foraging activities, the pulsation of this microorganism produces electric waves that correspond to different physiological states. It is possible to
+        decode its frequencies by retrieving real-time data and subsequently simulating this behaviour through audio-visual representation. The video is a conjunction of Physarum’s extracted frequencies played back by musician Tomás Gubbins Correa,
+        using different synthesisers. The result is an electronic symphony and an invitation to empathise with nonhuman systems, to listen to them.
       </p>
       <hr>
       <p class="video-credits">By: Valentine Maurice, Carlos Sfeir, Soyoun Shin (Shinso) and Bianca Schick<br>
@@ -103,7 +118,11 @@
         Scale: -∞ to +∞<br>
         Design Tool: Metalense / Invisipedia
         <hr>
-        Invisipedia is an imaginary open source platform, powered by the creation of the Metalense, a powerful lens designed for use in scientific laboratories. Users of Invisipedia can post, share, contribute and distribute images and knowledge about unnoticed life forms. The era of the unpredictable calls for new understandings of the planet, a new perception of and relationship with the species that we cohabit with. We perceive life to fall into two broad categories: microbes and macrobes, paying most of our attention to the latter. By zooming out and making the human small, we are making room for other organisms. The earth becomes as small as a human, and humans become microbes. Microbes are in fact the planet’s dominant life form and the dominant form of life within us. The video takes the lens as a fundamental frame through which to explore reality and questions human capacities for knowledge by reflecting on the accessibility of prosthetic devices as everyday tools of observation. The movie imagines an everyday use of the metalens, in order to make other two-thirds of life on earth visible.
+        Invisipedia is an imaginary open source platform, powered by the creation of the Metalense, a powerful lens designed for use in scientific laboratories. Users of Invisipedia can post, share, contribute and distribute images and knowledge
+        about unnoticed life forms. The era of the unpredictable calls for new understandings of the planet, a new perception of and relationship with the species that we cohabit with. We perceive life to fall into two broad categories: microbes and
+        macrobes, paying most of our attention to the latter. By zooming out and making the human small, we are making room for other organisms. The earth becomes as small as a human, and humans become microbes. Microbes are in fact the planet’s
+        dominant life form and the dominant form of life within us. The video takes the lens as a fundamental frame through which to explore reality and questions human capacities for knowledge by reflecting on the accessibility of prosthetic devices
+        as everyday tools of observation. The movie imagines an everyday use of the metalens, in order to make other two-thirds of life on earth visible.
       </p>
       <hr>
       <p class="video-credits">By: Laura Deschl, Beatriz Sousa, Chanbyul Park and Alexandre Varnier<br>
@@ -128,7 +147,9 @@
         Scale: -∞ to +∞<br>
         Design Tool: barcode <br>
         <hr>
-        Recently, the global market for direct-to-consumer DNA testing kits, which can provide insights into ancestry and genetic health, has boomed. However, the businesses selling these services often harness customer data in exploitative ways. In the very near future it will be possible to fully sequence the genetic information of any living organism on a mass scale, but how will all this data be handled? This short video considers an alternative to a centralised DNA system by imagining the 001Bank. The design scenario of this future bank sees access to scientific knowledge as a right, whilst also providing individuals with increased autonomy over how their personal information is shared.
+        Recently, the global market for direct-to-consumer DNA testing kits, which can provide insights into ancestry and genetic health, has boomed. However, the businesses selling these services often harness customer data in exploitative ways. In
+        the very near future it will be possible to fully sequence the genetic information of any living organism on a mass scale, but how will all this data be handled? This short video considers an alternative to a centralised DNA system by
+        imagining the 001Bank. The design scenario of this future bank sees access to scientific knowledge as a right, whilst also providing individuals with increased autonomy over how their personal information is shared.
       </p>
       <hr>
       <p class="video-credits">By: Claire Matthews, Emma Schep and Hi Kyung Eun <br>
@@ -150,7 +171,10 @@
         Scale: -∞ to +∞<br>
         Design Tool: narrative<br>
         <hr>
-        How can we know what nature is, if we interpret the natural world through the human narratives we project onto it? Through a tendency to anthropomorphize the world around us, humans have over-designed nature using story-telling and age-old narratives that have become deeply embedded in western culture. Interspecies Saga is a fictional documentary examining mythological human-animal relations. Extracting from historical, religious, psychological, and fandom perspectives, the found footage narrates how humans have found ways of internalizing and externalizing the natural world. The movie suggests the need for new subjective interpretations of what nature is, that break with ideological hierarchies that have mostly placed humans outside of or above nature.
+        How can we know what nature is, if we interpret the natural world through the human narratives we project onto it? Through a tendency to anthropomorphize the world around us, humans have over-designed nature using story-telling and age-old
+        narratives that have become deeply embedded in western culture. Interspecies Saga is a fictional documentary examining mythological human-animal relations. Extracting from historical, religious, psychological, and fandom perspectives, the
+        found footage narrates how humans have found ways of internalizing and externalizing the natural world. The movie suggests the need for new subjective interpretations of what nature is, that break with ideological hierarchies that have mostly
+        placed humans outside of or above nature.
       </p>
       <hr>
       <p class="video-credits">By: Pauline Rip, Maren Bang Tøndevold and Ramon Jimenez Cardenas <br>
@@ -172,7 +196,11 @@
         Scale: 1 cm to +∞<br>
         Design Tool: narrative<br>
         <hr>
-        In this fictional desktop movie, an internet user comes across a podcast, which looks at the night sky, exploring satellites, space junk and international collaboration between aerospatial engineering companies. Triggered by what he hears --an inquiry into the militarization and weaponization of space-- the user is left wondering whose interests are being protected in outer space. Over the course of his research, the Internet user becomes aware of a certain lack of organisation in the cosmos (a near-crash between ESA and Starlink satellites, an overabundance of debris, etc.). This dream territory does not seem to be governed by common laws, and who runs what and how, in a landscape populated by an increasing number of private actors, has become an urgent question. The movie thus questions a dreamy and romantic image of space through the voice of an invented activist group, ‘The Final Cut’, whose members believe that if space is part of the commons, all members of that common should have a say in a story that is being written right now.
+        In this fictional desktop movie, an internet user comes across a podcast, which looks at the night sky, exploring satellites, space junk and international collaboration between aerospatial engineering companies. Triggered by what he hears
+        --an inquiry into the militarization and weaponization of space-- the user is left wondering whose interests are being protected in outer space. Over the course of his research, the Internet user becomes aware of a certain lack of
+        organisation in the cosmos (a near-crash between ESA and Starlink satellites, an overabundance of debris, etc.). This dream territory does not seem to be governed by common laws, and who runs what and how, in a landscape populated by an
+        increasing number of private actors, has become an urgent question. The movie thus questions a dreamy and romantic image of space through the voice of an invented activist group, ‘The Final Cut’, whose members believe that if space is part of
+        the commons, all members of that common should have a say in a story that is being written right now.
       </p>
       <hr>
       <p class="video-credits">By: Rona David, Jonas Hejduk, Juliette Mirabitto and Rebecca Schedler <br>
@@ -182,7 +210,7 @@
     </div>
   </div>
 
-<!-- LIGHTBOX -->
+  <!-- LIGHTBOX -->
   <div id="myModal" class="modal">
     <span class="close cursor" onclick="closeModal()">&times;</span>
     <div class="modal-content">
