--- a/index.html
+++ b/index.html
@@ -2,41 +2,44 @@
 <!-- This is a test site using flocking boids code written by http://www.harmendeweerd.nl/ (thank u Harmen!) -->
 
 <head>
-  <title>Stigmergy</title>
+  <title>Looking for Stigmergy</title>
   <link href="stylesheet.css" rel="stylesheet">
   <script language=JavaScript src="mouse.js"></script>
   <script language=JavaScript src="boids_sim.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
+  <link rel="manifest" href="favicon/site.webmanifest">
   <style>
+    .header-homepage {
+      margin-top: 15px;
+      padding: 12px;
+      position: fixed;
+    }
 
-  .header-homepage {
-    margin-top: 15px;
-    padding: 12px;
-    position: fixed;
-  }
+    .menu {
+      color: #fff;
+      padding: 12px;
+      width: 100%;
+      border-top: 1px solid #fff;
+    }
 
-  .menu {
-    color: #fff;
-    padding: 12px;
-    width: 100%;
-    border-top: 1px solid #fff;
-  }
+    .menu p {
+      display: inline;
+      font-size: 24px;
+      line-height: 1.3;
+    }
 
-  .menu p {
-    display: inline;
-    font-size: 24px;
-    line-height: 1.3;
-  }
+    a {
+      color: #fff;
+      text-decoration: none;
+    }
 
-  a {
-    color: #fff;
-    text-decoration: none;
-  }
-
-  a:hover {
-    color: #CCFF00;
-    font-style: italic;
-  }
+    a:hover {
+      color: #CCFF00;
+      font-style: italic;
+    }
   </style>
 
 </head>
@@ -53,21 +56,6 @@
     <p>→ Episode II: Coming soon <small>✺ April 2021 ✺ exhibition ✺ 5th Istanbul Biennial ✺</small><br></p>
     <p>→ <a href="">Episode I: From Underwater to Outer Space</a></p> <small>✺ February 2021 ✺ online radio event ✺ Design Academy Eindhoven ✺ 5th Istanbul Biennial ✺</small> <br>
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
