--- a/episode-01.html
+++ b/episode-01.html
@@ -16,7 +16,7 @@
       <h1>Looking for Stigmergy → Episode I: From Underwater to Outer Space </h1>
     </div>
     <div class="box" style="text-align:right;">
-      <small><a href="index.html">Back to overview →</a></small>
+      <small><a href="index.html">Home →</a></small>
     </div>
   </header>
   <!-- INFO -->
@@ -38,12 +38,12 @@
         Your browser does not support the audio element.
       </audio><br><br>
       <p class="video-description">Programme:<br>
-        14:00–14:30 (In)visible Other<br>
-        14:30–15:00 E-cotuning<br>
-        15:00–15:30 The Observer and the Observed<br>
-        15:30–16:00 001 Bank<br>
-        16:00–16:30 Interspecies Saga<br>
-        16:30–17:00 The Final Cut<br>
+        14:00–14:30 ✺ The Final Cut<br>
+        14:30–15:00 ✺ (In)visible Other<br>
+        15:00–15:30 ✺ E-cotuning<br>
+        15:30–16:00 ✺ Interspecies SAGA Documentary<br>
+        16:00–16:30 ✺ 001 Bank<br>
+        16:30–17:00 ✺ The Observer and the Observed<br>
       </p>
     </div>
   </div>
@@ -51,31 +51,59 @@
   <div class="videos">
     <!-- video 1 -->
     <div class="box">
-      <img src="assets/video-theobserverandtheobserved.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
-      <p class="video-title">The Observer and the Observed</p>
+      <img src="assets/video-thefinalcut.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+      <p class="video-title">The Final Cut </p>
       <hr>
       <p class="video-description">
-        2'45" animated found-footage of sea-worlds
+        6'52" fictional desktop movie on space activism
         <hr>
-        System: cognitive visuality<br>
-        Agents: microorganisms<br>
-        Environment: underwater<br>
-        Scale: -∞ to 0 cm<br>
-        Design Tool: diving mask<br>
+        System: satellites<br>
+        Agents: companies <br>
+        Environment: outer space<br>
+        Scale: 1 cm to +∞<br>
+        Design Tool: narrative<br>
         <hr>
-        The nature of identity categorisation conditions us to see “the other” in opposition to “ourselves”; as a result, separation and conflict arise, leading to mutual misunderstandings. With the aim of humbling human kind, the Mask invites its
-        wearer to see the world from the perspective of a microorganism. The Mask aims to reverse the dominant logic and offer different ways of seeing. A series of tentacle-shaped sensors are attached to the Mask, which is equipped with night
-        vision. Thanks to these, the microorganisms, either floating in the ocean or bound to marine creatures, can be seen with the help of bioluminescence. This short video is composed of a sequence of found footage, animated by newly drawn
-        animations which simulate fluorescent submarine vision, so the human eye can see underwater. Thus, we are reminded that “tools” are the central players in shaping relationships between humans and nature.
+        In this fictional desktop movie, an internet user comes across a podcast, which looks at the night sky, exploring satellites, space junk and international collaboration between aerospatial engineering companies. Triggered by what he hears
+        --an inquiry into the militarization and weaponization of space-- the user is left wondering whose interests are being protected in outer space. Over the course of his research, the Internet user becomes aware of a certain lack of
+        organisation in the cosmos (a near-crash between ESA and Starlink satellites, an overabundance of debris, etc.). This dream territory does not seem to be governed by common laws, and who runs what and how, in a landscape populated by an
+        increasing number of private actors, has become an urgent question. The movie thus questions a dreamy and romantic image of space through the voice of an invented activist group, ‘The Final Cut’, whose members believe that if space is part of
+        the commons, all members of that common should have a say in a story that is being written right now.
       </p>
       <hr>
-      <p class="video-credits">By: Daatje Vera Noot, Tzuyen Chen and Paula Chang <br>
-        Mentored by: Yvonne Droge Wendel
+      <p class="video-credits">By: Rona David, Jonas Hejduk, Juliette Mirabitto and Rebecca Schedler <br>
+        Mentored by: Irene Stracuzzi
         <br><br>
       </p>
     </div>
     <!-- video 2 -->
     <div class="box">
+      <img src="assets/video-invisibleother.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+      <p class="video-title">(In)visible Other</p>
+      <hr>
+      <p class="video-description">
+        4'20" video essay imagining new scales of existence
+        <hr>
+        System: optical horizons<br>
+        Agents: microorganisms<br>
+        Environment: any life supporting environment<br>
+        Scale: -∞ to +∞<br>
+        Design Tool: Metalense / Invisipedia
+        <hr>
+        Invisipedia is an imaginary open source platform, powered by the creation of the Metalense, a powerful lens designed for use in scientific laboratories. Users of Invisipedia can post, share, contribute and distribute images and knowledge
+        about unnoticed life forms. The era of the unpredictable calls for new understandings of the planet, a new perception of and relationship with the species that we cohabit with. We perceive life to fall into two broad categories: microbes and
+        macrobes, paying most of our attention to the latter. By zooming out and making the human small, we are making room for other organisms. The earth becomes as small as a human, and humans become microbes. Microbes are in fact the planet’s
+        dominant life form and the dominant form of life within us. The video takes the lens as a fundamental frame through which to explore reality and questions human capacities for knowledge by reflecting on the accessibility of prosthetic devices
+        as everyday tools of observation. The movie imagines an everyday use of the metalens, in order to make other two-thirds of life on earth visible.
+      </p>
+      <hr>
+      <p class="video-credits">By: Laura Deschl, Beatriz Sousa, Chanbyul Park and Alexandre Varnier<br>
+        Voice: Sophie Conroy<br>
+        Footage: found footage <br>
+        Mentored by: Yvonne Droge Wendel<br><br>
+      </p>
+    </div>
+    <!-- video 3 -->
+    <div class="box" style="border-right: none;">
       <img src="assets/video-ecotuning.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
       <p class="video-title">E-cotuning</p>
       <hr>
@@ -104,60 +132,9 @@
         <br><br>
       </p>
     </div>
-    <!-- video 3 -->
-    <div class="box" style="border-right: none;">
-      <img src="assets/video-invisibleother.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
-      <p class="video-title">(In)visible Other</p>
-      <hr>
-      <p class="video-description">
-        4'20" video essay imagining new scales of existence
-        <hr>
-        System: optical horizons<br>
-        Agents: microorganisms<br>
-        Environment: any life supporting environment<br>
-        Scale: -∞ to +∞<br>
-        Design Tool: Metalense / Invisipedia
-        <hr>
-        Invisipedia is an imaginary open source platform, powered by the creation of the Metalense, a powerful lens designed for use in scientific laboratories. Users of Invisipedia can post, share, contribute and distribute images and knowledge
-        about unnoticed life forms. The era of the unpredictable calls for new understandings of the planet, a new perception of and relationship with the species that we cohabit with. We perceive life to fall into two broad categories: microbes and
-        macrobes, paying most of our attention to the latter. By zooming out and making the human small, we are making room for other organisms. The earth becomes as small as a human, and humans become microbes. Microbes are in fact the planet’s
-        dominant life form and the dominant form of life within us. The video takes the lens as a fundamental frame through which to explore reality and questions human capacities for knowledge by reflecting on the accessibility of prosthetic devices
-        as everyday tools of observation. The movie imagines an everyday use of the metalens, in order to make other two-thirds of life on earth visible.
-      </p>
-      <hr>
-      <p class="video-credits">By: Laura Deschl, Beatriz Sousa, Chanbyul Park and Alexandre Varnier<br>
-        Voice: Sophie Conroy<br>
-        Footage: found footage <br>
-        Mentored by: Yvonne Droge Wendel<br><br>
-      </p>
-    </div>
   </div>
   <!-- video 4 -->
   <div class="videos">
-    <div class="box">
-      <img src="assets/video-001bank.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
-      <p class="video-title">001 Bank</p>
-      <hr>
-      <p class="video-description">
-        4'41" sketch on the future of genetic data storage
-        <hr>
-        System: data storage <br>
-        Agents: DNA sequences <br>
-        Environment: bank platform<br>
-        Scale: -∞ to +∞<br>
-        Design Tool: barcode <br>
-        <hr>
-        Recently, the global market for direct-to-consumer DNA testing kits, which can provide insights into ancestry and genetic health, has boomed. However, the businesses selling these services often harness customer data in exploitative ways. In
-        the very near future it will be possible to fully sequence the genetic information of any living organism on a mass scale, but how will all this data be handled? This short video considers an alternative to a centralised DNA system by
-        imagining the 001Bank. The design scenario of this future bank sees access to scientific knowledge as a right, whilst also providing individuals with increased autonomy over how their personal information is shared.
-      </p>
-      <hr>
-      <p class="video-credits">By: Claire Matthews, Emma Schep and Hi Kyung Eun <br>
-        Mentored by: Jesse Howard
-        <br><br>
-      </p>
-    </div>
-    <!-- video 5 -->
     <div class="box">
       <img src="assets/video-interspeciessaga.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
       <p class="video-title">Interspecies SAGA Documentary</p>
@@ -182,29 +159,52 @@
         <br><br>
       </p>
     </div>
-    <!-- video 6 -->
-    <div class="box" style="border-right: none;">
-      <img src="assets/video-thefinalcut.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
-      <p class="video-title">The Final Cut </p>
+    <!-- video 5 -->
+    <div class="box">
+      <img src="assets/video-001bank.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+      <p class="video-title">001 Bank</p>
       <hr>
       <p class="video-description">
-        6'52" fictional desktop movie on space activism
+        4'41" sketch on the future of genetic data storage
         <hr>
-        System: satellites<br>
-        Agents: companies <br>
-        Environment: outer space<br>
-        Scale: 1 cm to +∞<br>
-        Design Tool: narrative<br>
+        System: data storage <br>
+        Agents: DNA sequences <br>
+        Environment: bank platform<br>
+        Scale: -∞ to +∞<br>
+        Design Tool: barcode <br>
         <hr>
-        In this fictional desktop movie, an internet user comes across a podcast, which looks at the night sky, exploring satellites, space junk and international collaboration between aerospatial engineering companies. Triggered by what he hears
-        --an inquiry into the militarization and weaponization of space-- the user is left wondering whose interests are being protected in outer space. Over the course of his research, the Internet user becomes aware of a certain lack of
-        organisation in the cosmos (a near-crash between ESA and Starlink satellites, an overabundance of debris, etc.). This dream territory does not seem to be governed by common laws, and who runs what and how, in a landscape populated by an
-        increasing number of private actors, has become an urgent question. The movie thus questions a dreamy and romantic image of space through the voice of an invented activist group, ‘The Final Cut’, whose members believe that if space is part of
-        the commons, all members of that common should have a say in a story that is being written right now.
+        Recently, the global market for direct-to-consumer DNA testing kits, which can provide insights into ancestry and genetic health, has boomed. However, the businesses selling these services often harness customer data in exploitative ways. In
+        the very near future it will be possible to fully sequence the genetic information of any living organism on a mass scale, but how will all this data be handled? This short video considers an alternative to a centralised DNA system by
+        imagining the 001Bank. The design scenario of this future bank sees access to scientific knowledge as a right, whilst also providing individuals with increased autonomy over how their personal information is shared.
       </p>
       <hr>
-      <p class="video-credits">By: Rona David, Jonas Hejduk, Juliette Mirabitto and Rebecca Schedler <br>
-        Mentored by: Irene Stracuzzi
+      <p class="video-credits">By: Claire Matthews, Emma Schep and Hi Kyung Eun <br>
+        Mentored by: Jesse Howard
+        <br><br>
+      </p>
+    </div>
+    <!-- video 6 -->
+    <div class="box" style="border-right: none;">
+      <img src="assets/video-theobserverandtheobserved.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+      <p class="video-title">The Observer and the Observed</p>
+      <hr>
+      <p class="video-description">
+        2'45" animated found-footage of sea-worlds
+        <hr>
+        System: cognitive visuality<br>
+        Agents: microorganisms<br>
+        Environment: underwater<br>
+        Scale: -∞ to 0 cm<br>
+        Design Tool: diving mask<br>
+        <hr>
+        The nature of identity categorisation conditions us to see “the other” in opposition to “ourselves”; as a result, separation and conflict arise, leading to mutual misunderstandings. With the aim of humbling human kind, the Mask invites its
+        wearer to see the world from the perspective of a microorganism. The Mask aims to reverse the dominant logic and offer different ways of seeing. A series of tentacle-shaped sensors are attached to the Mask, which is equipped with night
+        vision. Thanks to these, the microorganisms, either floating in the ocean or bound to marine creatures, can be seen with the help of bioluminescence. This short video is composed of a sequence of found footage, animated by newly drawn
+        animations which simulate fluorescent submarine vision, so the human eye can see underwater. Thus, we are reminded that “tools” are the central players in shaping relationships between humans and nature.
+      </p>
+      <hr>
+      <p class="video-credits">By: Daatje Vera Noot, Tzuyen Chen and Paula Chang <br>
+        Mentored by: Yvonne Droge Wendel
         <br><br>
       </p>
     </div>
