--- a/episode-01.html
+++ b/episode-01.html
@@ -16,7 +16,7 @@
       <h1>Looking for Stigmergy → Episode I: From Underwater to Outer Space </h1>
     </div>
     <div class="box" style="text-align:right;">
-      <small><a href="index.html">Home →</a></small>
+      <small><a href="https://lookingfor.stigmergy.online/">Home →</a></small>
     </div>
   </header>
   <!-- INFO -->
@@ -38,11 +38,12 @@
         Your browser does not support the audio element.
       </audio><br><br>
       <p class="video-description">Programme:<br>
-        14:00–14:30 ✺ The Final Cut<br>
-        14:30–15:00 ✺ (In)visible Other<br>
-        15:00–15:30 ✺ E-cotuning<br>
-        15:30–16:00 ✺ Interspecies SAGA Documentary<br>
-        16:00–16:30 ✺ 001 Bank<br>
+        13:30–13:35 ✺ Introduction<br>
+        13:35–14:05 ✺ The Final Cut<br>
+        14:10–14:40 ✺ (In)visible Other<br>
+        14:45–15:15 ✺ E-cotuning<br>
+        15:20–15:50 ✺ Interspecies SAGA Documentary<br>
+        15:55–16:25 ✺ 001 Bank<br>
         16:30–17:00 ✺ The Observer and the Observed<br>
       </p>
     </div>
@@ -209,6 +210,16 @@
       </p>
     </div>
   </div>
+  <footer>
+    <div class="box" style="border: none;">
+      <p>Produced in occasion of <a href="https://empathyrevisited.iksv.org/en/index">Empathy Revisited: Designs for more than one, 5th Istanbul Biennial</a> curated by Mariana Pestana and supported by the Consulate General of the Kingdom of the Netherlands in Istanbul, Looking for Stigmergy → Episode I: From Underwater to Outer Space is curated by Martina Muzi, edited by Chiara Clarke Siravo, with graphic identity and a website designed by Kirsten Spruit.
+      </p>
+    </div>
+    <div class="box" style="border: none;">
+      <p style="text-align:right;">✺
+      </p>
+    </div>
+  </footer>
 
   <!-- LIGHTBOX -->
   <div id="myModal" class="modal">
