--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="menu">
     <p><a href="">About</a></p><br>
     <p>→ Episode II: Coming soon <small>April 2021 ✺ exhibition ✺ 5th Istanbul Biennial</small><br></p>
-    <p>→ <a href="">Episode I: From Underwater to Outer Space</a></p> <small>February 2021 ✺ online radio event ✺ Design Academy Eindhoven ✺ 5th Istanbul Biennial</small> <br>
+    <p>→ <a href="https://lookingfor.stigmergy.online/episode-01">Episode I: From Underwater to Outer Space</a></p> <small>February 2021 ✺ online radio event ✺ Design Academy Eindhoven ✺ 5th Istanbul Biennial</small> <br>
   </div>
 
 
