--- a/episode-01.html
+++ b/episode-01.html
@@ -32,7 +32,7 @@
       </p><br>
     </div>
     <div class="box" style="border-right: none;">
-      <p class="video-description">This episode will be launched here on 26 February 2021 at 2pm CET through radio conversations with the participants, hosted by <a href="https://goodtimesbadtimes.club/">Good Times Bad Times</a>.</p><br>
+      <p class="video-description">This episode will be launched here on 26 February 2021 at 13:30 CET through radio conversations with the participants, moderated by <a href="https://goodtimesbadtimes.club/">Good Times Bad Times</a>.</p><br>
       <audio controls style="width:100%;">
         <source src="https://radio.goodtimesbadtimes.club/radio/8070/radio.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
@@ -212,7 +212,7 @@
   </div>
   <footer>
     <div class="box" style="border: none;">
-      <p>Produced in occasion of <a href="https://empathyrevisited.iksv.org/en/index">Empathy Revisited: Designs for more than one, 5th Istanbul Biennial</a> curated by Mariana Pestana and supported by the Consulate General of the Kingdom of the Netherlands in Istanbul, Looking for Stigmergy → Episode I: From Underwater to Outer Space is curated by Martina Muzi, edited by Chiara Clarke Siravo, with graphic identity and a website designed by Kirsten Spruit.
+      <p>Produced in occasion of <a href="https://empathyrevisited.iksv.org/en/index">Empathy Revisited: Designs for more than one, 5th Istanbul Biennial</a> curated by Mariana Pestana and supported by the Consulate General of the Kingdom of the Netherlands in Istanbul, <i>Looking for Stigmergy → Episode I: From Underwater to Outer Space</i> is curated by Martina Muzi and edited by Chiara Clarke Siravo, with graphic identity and website by Kirsten Spruit.
       </p>
     </div>
     <div class="box" style="border: none;">
@@ -258,7 +258,7 @@
 
     </div>
   </div>
-  <!-- LIGHTBOX -->
+
 
 
   <script>
