--- a/episode-01.html
+++ b/episode-01.html
@@ -212,7 +212,7 @@
   </div>
   <footer>
     <div class="box" style="border: none;">
-      <p>Produced in occasion of <a href="https://empathyrevisited.iksv.org/en/index">Empathy Revisited: Designs for more than one, 5th Istanbul Biennial</a> curated by Mariana Pestana and supported by the Consulate General of the Kingdom of the Netherlands in Istanbul, <i>Looking for Stigmergy → Episode I: From Underwater to Outer Space</i> is curated by Martina Muzi and edited by Chiara Clarke Siravo, with graphic identity and website by Kirsten Spruit.
+      <p>Produced in occasion of <a href="https://empathyrevisited.iksv.org/en/index">Empathy Revisited: Designs for more than one, 5th Istanbul Design Biennial</a> curated by Mariana Pestana and supported by the Consulate General of the Kingdom of the Netherlands in Istanbul, <i>Looking for Stigmergy → Episode I: From Underwater to Outer Space</i> is curated by Martina Muzi and edited by Chiara Clarke Siravo, with graphic identity and website by Kirsten Spruit.
       </p>
     </div>
     <div class="box" style="border: none;">
