--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="manifest" href="favicon/site.webmanifest">
   <style>
+
     .header-homepage {
       margin-top: 15px;
       padding: 12px;
+      z-index: -10;
       position: fixed;
     }
 
     .menu {
       color: #fff;
+      background: inherit;
       padding: 12px;
       width: 100%;
       border-top: 1px solid #fff;
+      bottom: 0px;
     }
 
     .menu p {
@@ -45,16 +49,36 @@
 </head>
 
 <body onLoad="init();">
-  <div class="header-homepage">
-    <h1>Looking for Stigmergy →</h1>
+
+    <div class="header-homepage">
+      <h1>Looking for Stigmergy →</h1>
+    </div>
+    <div class="background">
+      <canvas id="boidwindow" width=2400 height=2400></canvas>
+    </div>
+    <div class="menu">
+      <p><a onclick="showAbout()" href="#about-stigmergy">About</a></p><br>
+      <p>→ Episode II: Coming soon <small>April 2021 ✺ exhibition ✺ 5th Istanbul Design Biennial</small><br></p>
+      <p>→ <a href="https://lookingfor.stigmergy.online/episode-01">Episode I: From Underwater to Outer Space</a></p> <small>February 2021 ✺ online radio event ✺ Design Academy Eindhoven ✺ 5th Istanbul Design Biennial</small> <br><br>
+    </div>
+  <!-- ABOUT -->
+  <div id="about">
+    <div class="info">
+    <div class="box" style="border-bottom:none;">
+      <p id="about-stigmergy"><i>Looking for Stigmergy</i> is an ongoing independent inquiry into the languages of design and its systems. It is a search for new paradigms and tools that travels across disciplines and via modes of existence beyond the
+        human. The project addresses the epistemology of design so as to consider and incorporate not only humans as a transforming force, but also other organisms and systems. <i>Looking for Stigmergy</i> assumes the shape of a growing online
+        platform, which expands, contracts and morphs depending on the context or institution in which it operates. The platform is ‘fed’ through temporary exhibitions, pedagogical experiments, round-table conversations, conferences and publications,
+        through physical and non-physical means.
+      </p><br>
+    </div>
+    <div class="box" style="border:none;">
+      <small>
+        Curator: <a href="https://www.instagram.com/martina.muzi/">Martina Muzi</a><br>
+        Editing: <a href="https://www.instagram.com/chiara_clarke/">Chiara Clarke Siravo</a><br>
+        Graphic identity + website: <a href="https://kirstenspruit.com/">Kirsten Spruit</a><br><br>
+      </small>
+    </div>
   </div>
-  <div class="background">
-    <canvas id="boidwindow" width=2400 height=2400></canvas>
-  </div>
-  <div class="menu">
-    <p><a href="">About</a></p><br>
-    <p>→ Episode II: Coming soon <small>April 2021 ✺ exhibition ✺ 5th Istanbul Design Biennial</small><br></p>
-    <p>→ <a href="https://lookingfor.stigmergy.online/episode-01">Episode I: From Underwater to Outer Space</a></p> <small>February 2021 ✺ online radio event ✺ Design Academy Eindhoven ✺ 5th Istanbul Design Biennial</small> <br>
   </div>
 
 
@@ -133,5 +157,16 @@
   <!-- - - - - - - - - - - - - - end controls  - - - - - - - - - - - - -  -->
 
 </body>
+
+<script>
+function showAbout() {
+  var x = document.getElementById("about");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
+</script>
 
 </html>
