--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <canvas id="boidwindow" width=2400 height=2400></canvas>
     </div>
     <div class="menu">
-      <p><a onclick="showAbout()" href="#about-stigmergy">About</a></p><br>
+      <p><a onclick="showAbout()" href="#about">About</a></p><br>
       <p>→ Episode II: Coming soon <small>April 2021 ✺ exhibition ✺ 5th Istanbul Design Biennial</small><br></p>
       <p>→ <a href="https://lookingfor.stigmergy.online/episode-01">Episode I: From Underwater to Outer Space</a></p> <small>February 2021 ✺ online radio event ✺ Design Academy Eindhoven ✺ 5th Istanbul Design Biennial</small> <br><br>
     </div>
@@ -65,7 +65,7 @@
   <div id="about">
     <div class="info">
     <div class="box" style="border-bottom:none;">
-      <p id="about-stigmergy"><i>Looking for Stigmergy</i> is an ongoing independent inquiry into the languages of design and its systems. It is a search for new paradigms and tools that travels across disciplines and via modes of existence beyond the
+      <p><i>Looking for Stigmergy</i> is an ongoing independent inquiry into the languages of design and its systems. It is a search for new paradigms and tools that travels across disciplines and via modes of existence beyond the
         human. The project addresses the epistemology of design so as to consider and incorporate not only humans as a transforming force, but also other organisms and systems. <i>Looking for Stigmergy</i> assumes the shape of a growing online
         platform, which expands, contracts and morphs depending on the context or institution in which it operates. The platform is ‘fed’ through temporary exhibitions, pedagogical experiments, round-table conversations, conferences and publications,
         through physical and non-physical means.
