--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
     </div>
     <div class="menu">
       <p>✺ <a onclick="showAbout()" href="#about">About</a></p><br>
-      <p>✺ Episode II: Coming soon <small>April 2021 ✺ exhibition ✺ 5th Istanbul Design Biennial</small><br></p>
-      <p>✺ <a href="https://lookingfor.stigmergy.online/episode-01">Episode I: From Underwater to Outer Space</a></p> <small>February 2021 ✺ online radio event ✺ Design Academy Eindhoven ✺ 5th Istanbul Design Biennial</small> <br><br>
+      <p>✺ <a href="https://lookingfor.stigmergy.online/episode-01">Episode I: From Underwater to Outer Space</a></p> <small>✺ February 2021 ✺ online radio event ✺ Design Academy Eindhoven ✺ 5th Istanbul Design Biennial</small><br>
+      <p>✺ Episode II: Coming soon <small>✺ April 2021 ✺ exhibition ✺ 5th Istanbul Design Biennial</small></p><br>
+      <br>
 
     </div>
   <!-- ABOUT -->
