--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div class="box" style="border:none;">
       <small>
         Curator: <a href="https://www.instagram.com/martina.muzi/">Martina Muzi</a><br>
-        Editing: <a href="https://www.instagram.com/chiara_clarke/">Chiara Clarke Siravo</a><br>
+        Editor: <a href="https://www.instagram.com/chiara_clarke/">Chiara Clarke Siravo</a><br>
         Graphic identity + website: <a href="https://kirstenspruit.com/">Kirsten Spruit</a><br><br>
       </small>
     </div>
