--- a/episode-01.html
+++ b/episode-01.html
@@ -127,7 +127,7 @@
       <p class="video-credits">By: Valentine Maurice, Carlos Sfeir, Soyoun Shin (Shinso) and Bianca Schick<br>
         Music: Tomás Gubbins Correa <br>
         Animation Support: Alex Foradori <br>
-        Digital Coding and Website Support: Jacopo Nardi, Michele Piobbico, The Bug Studio <br>
+        Digital Coding and Website Support: Jacopo Nardi, Michele Piobbico (The Bug Studio) <br>
         Arduino Advisor and Sound Coding Support: Ko de Beer<br>
         Mentored by: Irene Stracuzzi
         <br><br>
