--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-<!-- This is a test site using flocking boids code written by http://www.harmendeweerd.nl/ (thank u Harmen!) -->
+<!-- Flocking boids code written by http://www.harmendeweerd.nl/ (thank u Harmen!) -->
 
 <head>
   <title>Looking for Stigmergy</title>
