--- a/episode-01.html
+++ b/episode-01.html
@@ -71,7 +71,7 @@
         the commons, all members of that common should have a say in a story that is being written right now.
       </p>
       <hr>
-      <p class="video-credits">By: Rona David, Jonas Hejduk, Juliette Mirabitto and Rebecca Schedler <br>
+      <p class="video-credits">By: Rona David, Jonas Hejduk, Juliette Mirabito and Rebecca Schedler <br>
         Mentored by: Irene Stracuzzi
         <br><br>
       </p>
@@ -212,13 +212,15 @@
   </div>
   <footer>
     <div class="box" style="border: none;">
-      <p>Produced in occasion of <a href="https://empathyrevisited.iksv.org/en/index">Empathy Revisited: Designs for more than one, 5th Istanbul Design Biennial</a> curated by Mariana Pestana and supported by the Consulate General of the Kingdom of the Netherlands in Istanbul, <i>Looking for Stigmergy → Episode I: From Underwater to Outer Space</i> is curated by Martina Muzi and edited by Chiara Clarke Siravo, with graphic identity and website by Kirsten Spruit.
-      </p>
+      <small>Produced in occasion of <a href="https://empathyrevisited.iksv.org/en/index">Empathy Revisited: Designs for more than one, 5th Istanbul Design Biennial</a> curated by Mariana Pestana and supported by the Consulate General of the Kingdom of the Netherlands in Istanbul, <i>Looking for Stigmergy → Episode I: From Underwater to Outer Space</i> is curated by Martina Muzi and edited by Chiara Clarke Siravo, with graphic identity and website by Kirsten Spruit.
+      </small><br><br>
+      <img src="assets/DAE_Logo3.0.png" style="width:150px;">
     </div>
     <div class="box" style="border: none;">
-      <p style="text-align:right;">✺
+      <p style="text-align:right; vertical-align: bottom;">✺
       </p>
     </div>
+
   </footer>
 
   <!-- LIGHTBOX -->
