--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <small>
         Curator: <a href="https://www.instagram.com/martina.muzi/">Martina Muzi</a><br>
         Editor: <a href="https://www.instagram.com/chiara_clarke/">Chiara Clarke Siravo</a><br>
-        Graphic identity + website: <a href="https://kirstenspruit.com/">Kirsten Spruit</a><br><br>
+        Graphic identity + website: <a href="http://kirstenspruit.com/">Kirsten Spruit</a><br><br>
       </small>
     </div>
   </div>
