--- a/episode-01.html
+++ b/episode-01.html
@@ -32,19 +32,18 @@
       </p><br>
     </div>
     <div class="box" style="border-right: none;">
-      <p class="video-description">This episode will be launched here on 26 February 2021 at 13:30 CET through radio conversations with the participants, moderated by <a href="https://goodtimesbadtimes.club/">Good Times Bad Times</a>.</p><br>
-      <audio controls style="width:100%;">
-        <source src="https://streaming.radio.co/s37a514532/listen" type="audio/mpeg">
-        Your browser does not support the audio element.
-      </audio><br><br>
-      <p class="video-description">Programme:<br>
-        13:30–13:35 ✺ Introduction<br>
-        13:35–14:05 ✺ (In)visible Other<br>
-        14:10–14:40 ✺ The Final Cut<br>
-        14:45–15:15 ✺ E-cotuning<br>
-        15:20–15:50 ✺ Interspecies SAGA Documentary<br>
-        15:55–16:25 ✺ 001 Bank<br>
-        16:30–17:00 ✺ The Observer and the Observed<br>
+      <p class="video-description">This episode was launched on 26 February 2021 through radio conversations with the participants, moderated by <a href="https://goodtimesbadtimes.club/">Good Times Bad Times</a>.<br><br>
+      Listen back to the broacast:</p><br>
+      <iframe width="100%" height="60" src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&light=1&hide_artwork=1&feed=%2Fgood_times_bad_times%2Flooking-for-stigmergy-episode-i-from-underwater-to-outer-space%2F" frameborder="0" ></iframe><br><br>
+      <p class="video-description">
+        00:00:00 ✺ Intro<br>
+        00:01:52 ✺ (In)visible Other<br>
+        00:36:30 ✺ The Final Cut<br>
+        01:06:50 ✺ E-cotuning<br>
+        01:40:50 ✺ Interspecies SAGA Documentary<br>
+        02:14:10 ✺ 001 Bank<br>
+        02:42:44 ✺ The Observer and the Observed<br>
+        03:08:18 ✺ Outro<br>
       </p>
     </div>
   </div>
