--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     </div>
     <div class="menu">
       <p>✺ <a onclick="showAbout()" href="#about">About</a></p><br>
-      <p>✺ <a href="https://lookingfor.stigmergy.online/episode-01">Episode I: From Underwater to Outer Space</a></p> <small>← TUNE IN ✺ 26 February 2021 ✺ online radio event ✺ Design Academy Eindhoven ✺ 5th Istanbul Design Biennial</small><br>
-      <p>✺ Episode II: Coming soon <small>✺ April 2021 ✺ exhibition ✺ 5th Istanbul Design Biennial</small></p><br>
+      <p>✺ <a href="https://lookingfor.stigmergy.online/episode-01">Episode I: From Underwater to Outer Space</a></p> <small>✺ online radio event ✺ 26 February 2021 ✺ Design Academy Eindhoven ✺ 5th Istanbul Design Biennial</small><br>
+      <p>✺ <a href="https://lookingfor.stigmergy.online/episode-02">Episode II: Sempitèrno</a> <small>✺ exhibition ✺ August/September 2021 ✺ Consulate General of the Kingdom of the Netherlands in Istanbul ✺ 5th Istanbul Design Biennial</small></p><br>
       <br>
 
     </div>
