--- a/episode-01.html
+++ b/episode-01.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Episode I</title>
-  <link href="stylesheet.css" rel="stylesheet">
+  <link href="stylesheet01.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
