--- a/episode-02.html
+++ b/episode-02.html
@@ -22,7 +22,7 @@
   <!-- INFO -->
   <div class="info">
     <div class="box">
-      <img src="assets/02/IMG_sempiterno2.jpg" style="width:100%">
+      <img src="assets/02/IMG_sempiterno3.png" style="width:100%">
     </div>
     <div class="box" style="border-right: none;">
       <p><i>Looking for Stigmergy</i> presents the installation <i>Sempitèrno</i>, a tridimensional composition of one of the most famous flowers in the world — the tulip. A flower of many colors and variations which empathically has been stimulating humankind's eyes and emotions as much as the politics of its productions. The Tulip, is the flower symbol of two countries, The Netherlands and Turkey which economic value mutated in centuries from being an expensive traded bulb to a mass produced natural and artificial “subject”of interest, inspiration, representation and consumption —consequently inspiring industrie, creativity, supply chains and markets both at a local and a global scale.
@@ -38,28 +38,34 @@
     <!-- image 1 -->
     <div class="box">
       <img src="assets/02/1-1-s.jpg" style="width:100%">
-      <p class="title">Level 1-1</p>
+      <p class="title">Level 1</p>
       <hr>
       <p class="description">
-        Side no. 1– 5 / “CURRENCY, (30.July.2021)”: 1 NL mass produced tile (8 € each) = 10 TR mass produced tiles (8,00 TL each)
+        External Side N° 1—5<hr>
+“Currency 30.July.2021”<hr>
+1 NL mass produced tile (8 € each) = 10 TR mass produced tiles (8,00 TL each)
       </p>
     </div>
     <!-- image 2 -->
     <div class="box">
       <img src="assets/02/1-2A-s.jpg" style="width:100%">
-      <p class="title">Level 1-2</p>
+      <p class="title">Level 1</p>
       <hr>
       <p class="description">
-        Side no 6 / “Pattern and Variation – Delft tiles”: Original Delft tiles replicated in a mordern tile, mini magnetic, and costar
+        External Side N° 6<hr>
+“Pattern and Variation in Delft tiles”<hr>
+Original Delft tiles replicated in a modern tile, mini magnetic, and costar
       </p>
     </div>
     <!-- image 3 -->
     <div class="box" style="border-right: none;">
       <img src="assets/02/1-3-s.jpg" style="width:100%">
-      <p class="title">Level 1-3</p>
+      <p class="title">Level 1</p>
       <hr>
       <p class="description">
-        Side no 7 / “Pattern – Turkish tile images in mini magnetics”: mini magnetics made of traditional Turkish tile images
+        External Side N° 7<hr>
+“Patterns in Turkish tiles and mini magnets”<hr>
+mini magnets made of traditional Turkish tile images
       </p>
     </div>
   </div>
@@ -67,28 +73,34 @@
   <div class="images">
     <div class="box">
       <img src="assets/02/1-4-s.jpg" style="width:100%">
-      <p class="title">Level 1-4</p>
+      <p class="title">Level 1</p>
       <hr>
       <p class="description">
-        Side no 8 / “Application – Delft tile”: An image of Delft tile is replicated in various applications – Replica tile, Paper napkin, Postcard and mini magnetic
+        External Side N° 8<hr>
+“Applications of Delft tile motives”<hr>
+An image of Delft tile is replicated in various applications – Replica tile, Paper napkin, Postcard and mini magnetic
       </p>
     </div>
     <!-- image 5 -->
     <div class="box">
       <img src="assets/02/1-5-s.jpg" style="width:100%">
-      <p class="title">Level 1-5</p>
+      <p class="title">Level 1</p>
       <hr>
       <p class="description">
-        Inside no. 1– 8 / “Identity”: National brandings and institutional identities created with tulips both in NL and in TR.
-      </p>
+        Internal Side N° 1—8<hr>
+“Identity”<hr>
+National brandings and institutional identities created with tulips both in NL and in TR.
+</p>
     </div>
     <!-- image 6 -->
     <div class="box" style="border-right: none;">
       <img src="assets/02/1-6-s.jpg" style="width:100%">
-      <p class="title">Level 1-6</p>
+      <p class="title">Level 1</p>
       <hr>
       <p class="description">
-        Bottom 1 / “Markets and landscapes shaped by tulip productions” (Photo: IURII BURIAK via Shutterstock)
+        Internal Bottom Plate<hr>
+“Markets and landscapes shaped by tulip productions”<hr>
+(Photo: <a href="https://www.shutterstock.com/g/IURII+BURIAK">IURII BURIAK via Shutterstock</a>)
       </p>
     </div>
   </div>
@@ -96,33 +108,35 @@
   <div class="images">
     <div class="box">
       <img src="assets/02/2-1-s.jpg" style="width:100%">
-      <p class="title">Level 2-1</p>
+      <p class="title">Level 2</p>
       <hr>
       <p class="description">
-        Facade, Side no. 1– 8 / “Tulip images in a set of playing cards”
+        External Side N° 1—8<hr>
+“Tulip images in a set of playing cards”
       </p>
     </div>
     <!-- image 8 -->
     <div class="box">
       <img src="assets/02/2-2-s.jpg" style="width:100%">
-      <p class="title">Level 2-2</p>
+      <p class="title">Level 2</p>
       <hr>
       <p class="description">
-        Rear, Side no. 1– 8 / “3D printed Sempre Augusts in a mirror garden”: Inspired by Adriaen Pauw (1564–1636), not
-        only a rich merchant, but also a Mayor of Amsterdam who planted a few rare tulips in his garden surrounded by several mirrors positioned strategically to fully reflect the flowers’ beauty.
+        Internal Side N° 1—8<hr>
+“3D printed <i>Sempre Augusts</i> in a mirror garden”<hr>
+Inspired by Adriaen Pauw (1564–1636), not only a rich merchant, but also a Mayor of Amsterdam who planted a few rare tulips in his garden surrounded by several mirrors positioned strategically to fully reflect the flowers’ beauty.
       </p>
     </div>
     <!-- image 9 -->
     <div class="box" style="border-right: none;">
       <img src="assets/02/2-3-s.jpg" style="width:100%">
-      <p class="title">Level 2-3</p>
+      <p class="title">Level 2</p>
       <hr>
       <p class="description">
-        Bottom 2 / “Gardens of Tulips”: Gardens that are implemented by a desire for tulips both in NL and in TR.
-        <hr>
-        Left: Naḫıls with overlapping round layers in the 1720 imperial festival. Seyyid vehbi efendi, Sūrnāme-i Vehbī, ca. 1730. tSmk a. 3594, fol. 6a. (photo: courtesy of the topkapı palace museum library)
-        <hr>
-        Right: Hortus Botanicus Leiden in 1610. Print by Jan Cornelisz. Woudanus and Willem Isaacsz. van Swanenburg. (Public Domain)
+        Internal Bottom Plate<hr>
+“Gardens of Tulips”<hr>
+Gardens that are implemented by a desire for tulips both in NL and in TR.<hr>
+Left image: <i>Naḫıls</i> with overlapping round layers in the 1720 imperial festival. Seyyid vehbi efendi, <i>Sūrnāme-i Vehbī</i>, ca. 1730. tSmk a. 3594, fol. 6a. (photo: courtesy of the topkapı palace museum library)<hr>
+Right image: Hortus Botanicus Leiden in 1610. Print by Jan Cornelisz. Woudanus and Willem Isaacsz. van Swanenburg. (Public Domain)
       </p>
     </div>
   </div>
@@ -130,28 +144,32 @@
   <div class="images">
     <div class="box">
       <img src="assets/02/3-1-s.jpg" style="width:100%">
-      <p class="title">Level 3-1</p>
+      <p class="title">Level 3</p>
       <hr>
       <p class="description">
-        Globe 1 / “Sempre Augustus”: Sempre Augustus paintings in 17th-century and reproduction of images in objects”
+        Globe  N°1<hr>
+“Sempre Augustus”<hr>
+Sempre Augustus paintings in 17th-century and reproduction of images in objects”
       </p>
     </div>
     <!-- image 11 -->
     <div class="box">
       <img src="assets/02/3-2-s.jpg" style="width:100%">
-      <p class="title">Level 3-2</p>
+      <p class="title">Level 3</p>
       <hr>
       <p class="description">
-        Branch 1-A / Tulip bulbs in cans
+        Branch N° 1A<hr>
+“Tulip bulbs in cans”
       </p>
     </div>
     <!-- image 12 -->
     <div class="box" style="border-right: none;">
       <img src="assets/02/3-3-s.jpg" style="width:100%">
-      <p class="title">Level 3-3</p>
+      <p class="title">Level 3</p>
       <hr>
       <p class="description">
-        Branch 1-B / Wooden tulips
+        Branch N° 1B<hr>
+“Wooden tulips”
       </p>
     </div>
   </div>
@@ -159,28 +177,32 @@
   <div class="images">
     <div class="box">
       <img src="assets/02/4-1-s.jpg" style="width:100%">
-      <p class="title">Level 4-1</p>
+      <p class="title">Level 4</p>
       <hr>
       <p class="description">
-        Globe 2 / “Pixelated Tulips”: Tulips in Minecraft” (image: Minecraft)
+        Globe N°2<hr>
+“Pixelated Tulips”<hr>
+Tulips built in Minecraft video game
       </p>
     </div>
     <!-- image 14 -->
     <div class="box">
       <img src="assets/02/4-2-s.jpg" style="width:100%">
-      <p class="title">Level 4-2</p>
+      <p class="title">Level 4</p>
       <hr>
       <p class="description">
-        Branch 2-A / Tourist souvenirs from NL and TR
+        Branch N°2A<hr>
+“Tourist souvenirs from NL and TR”
       </p>
     </div>
     <!-- image 15 -->
     <div class="box" style="border-right: none;">
       <img src="assets/02/4-3-s.jpg" style="width:100%">
-      <p class="title">Level 4-3</p>
+      <p class="title">Level 4</p>
       <hr>
       <p class="description">
-        Branch 2-B / LEGO tulips
+        Branch N°2B<hr>
+“LEGO tulips”
       </p>
     </div>
   </div>
@@ -188,28 +210,31 @@
   <div class="images">
     <div class="box">
       <img src="assets/02/5-1-s.jpg" style="width:100%">
-      <p class="title">Level 5-1</p>
+      <p class="title">Level 5</p>
       <hr>
       <p class="description">
-        Globe 3 / “TULPEILAND”: The tulip island is a peninsula shaped in the form of a tulip extending from the coast of Zeewolde in NL. 150,000 tulip bulbs are planted.
+        Globe N°3<hr>
+The tulip island is a peninsula shaped in the form of a tulip extending from the coast of Zeewolde in NL and where 150,000 tulip bulbs are planted.
       </p>
     </div>
     <!-- image 17 -->
     <div class="box">
       <img src="assets/02/5-2-s.jpg" style="width:100%">
-      <p class="title">Level 5-2</p>
+      <p class="title">Level 5</p>
       <hr>
       <p class="description">
-      Branch 3 / “Tulips on Christmas balls"
+        Branch N°3A<hr>
+  “Tulips on Christmas balls”
       </p>
     </div>
     <!-- image 18 -->
     <div class="box" style="border-right: none;">
       <img src="assets/02/5-3-s.jpg" style="width:100%">
-      <p class="title">Level 5-3</p>
+      <p class="title">Level 5</p>
       <hr>
       <p class="description">
-        LED tulips
+        Branch N°3B<hr>
+“LED tulips”
       </p>
     </div>
   </div>
